--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -320,5 +320,158 @@
     },
     "SCN-GEN-COUNTDOWN": {
         "TIMEOUT-NO-RESPONSE":"No response received, the service is terminated."
+    },
+    "SCN-GEN-STEPS": {
+        "TIME-REMAIN": "Time Remaining",
+        "PRIV-POLICY-HEADER": "Please scroll down and read the Privacy Policy. Tick the check box and press “Confirm” button to proceed to next step.",
+        "PRIV-POLICY": "Privacy Policy",
+        "PRIV-POLICY-PAR": "The Government of the Hong Kong Special Administrative Region (\"the Government\") is concerned to ensure that all personal data submitted through Self-service Registration Kiosk (\"SRK\") are handled in strict adherence to the relevant provisions of the Personal Data (Privacy) Ordinance (PD(P)O).",
+        "COLLECTION-INFO": "Collection of Information",
+        "COLLECTION-INFO-PAR": "This Government will record the visits to SRK by using cookies and page tagging without collecting any personal identifiable information of users.",
+        "COOKIES": "Cookies",
+        "COOKIES-PAR": "A cookie is a small amount of data created in a computer when a person visits a website on the computer. It often includes an anonymous unique identifier. A cookie can be used to identify a computer. It, however, is not used to collect any personal information. In other words, it does not have the function of identifying an individual user of the website.\n\nCookies are used by the Government to collect statistics about the number of visits of users to SRK and the users' preference of websites and online services offered on SRK.\n\nYou may choose to accept or reject cookies. If you reject the cookies, you will not be able to use some of the functions of SRK, such as saving your preferences in using the SRK and accessing some online services on SRK.",
+        "PAGE-TAGGING": "Page Tagging",
+        "PAGE-TAGGING-PAR": "Javascript and pixel tags are used to collect statistics on customer usage patterns of SRK and Government online services offered on SRK; and for tracking the performance of our online advertisements. A pixel tag is a transparent image placed on certain webpages to collect data on user activities. The collected data are aggregated and analysed for measuring the effectiveness, improving the usability of SRK and the services / online advertisements provided on SRK. No personal or identifiable information about a visitor would be collected.\n\nYou may disable JavaScript on your computer. Disabling JavaScript should not affect your access to SRK, but you will not be able to use some of the SRK functions, such as changing text size and accessing Government online services offered through SRK.",
+        "PROVISION-PERSONAL-DATA": "Provision of Personal Data",
+        "PROVISION-PERSONAL-DATA-PAR": "For different purposes and at different times you may be invited to provide personal data to the Government through SRK on a voluntary basis. Personal information may include name, telephone number, mailing address or e-mail address. The Government will specify the collection purpose and intended usage of your data when it invites you to provide such information and advise you how you may request access to or correction of the personal data provided.\n\nUnless permitted or required by law, the Government will not disclose your personal data to any third parties without your prior consent.\n\n SRK uses SSL protocol to encrypt data during network transmission to protect your personal data. All personal data you provide to the Government via SRK are secured, and access to them is restricted to authorised personnel only.",
+        "SEARCH-SERVICE": "Search Service",
+        "SEARCH-SERVICE-PAR": "Search service on SRK is provided by an independent contractor of the Government. We are advised by the independent contractor that it does not collect personal identifiable information while serving search results through SRK. The independent contractor will share the anonymous data it collects through the search service with the Government for compiling traffic analysis on government websites. The Government will not match the data obtained from any such search activity with any personal data possibly held by the Government.",
+        "PRIV-POLICY-AGREE": "I have read and agree to the above Privacy Policy.",
+        "INSERT-HKID": "Please insert your Smart ID Card (chip facing upward).",
+        "PLACE-RIGHT-FP": "Please place your finger flat on the fingerprint scanner.",
+        "PLACE-LEFT-FP": "Please place your finger flat on the fingerprint scanner.",
+        "ABORT": "Abort",
+        "VIEW_INFO_CARD": "Enquiry of personal data in chip of identity card",
+        "UPDATE-CONDITION-STAY": "Update Condition of Stay and Limit of Stay in chip of identity card",
+        "TYPE-OF-HKID-CARD": "Please select the type of your Smart ID Card.",
+        "COLLECT-HKID-CARD": "Please collect your Smart ID Card.",
+        "UPDATE-STAY-CONDITION-INFO": "The updated Condition of Stay and Limit of Stay in the chip of your identity card are as follow:",
+        "CONDITION-OF-STAY": "Condition of Stay：",
+        "LIMIT-OF-STAY": "Limit of Stay",
+        "PROCESSING-READ": "Processing, please wait...",
+        "ABORT_CONFIRM": "Are you sure to abort the process?",
+        "YES": "Confirm",
+        "NO": "Cancel",
+        "NEXT": "Next",
+        "PROCESSING": "Processing, please wait...",
+        "OLD-HKID-CARD-LABLE": "Select Old HKID Card",
+        "NEW-HKID-CARD-LABLE": "Select New HKID Card",
+        "NOT-CONFIRM-MSG": "Please collect your Acknowledgement form/ID card, and go to collection counter.",
+        "NAME-IN-CHINESE": "Name in Chinese",
+        "NAME-IN-ENGLISH": "Name in English",
+        "NAME-IN-CCC": "Name in C.C.C.",
+        "DATE-OF-BIRTH": "Date of Birth",
+        "SYMBOLS": "Symbol",
+        "DATE-OF-ISSUE": "Date of Issue",
+        "OTHER-APPLICATIONS": "Other Applications",
+        "SEX": "Sex",
+        "SEX-M": "M",
+        "SEX-F": "F",
+        "MONTH-YEAR-REGISTRATION": "Month-Year of 1st Registration",
+        "ID-CARD-NO": "Identity Card Number",
+        "COND-STAY": "Condition of Stay",
+        "LENGTH-STAY": "Limit of Stay",
+        "TIMMER": "Time Remaining",
+        "LANGUAGE": "中文",
+        "NAVIGATION": "Step",
+        "CONFIRM-INFO": "Your personal information in chip of identity card is as follows:",
+        "CONFIRM": "Confirm",
+        "RE-SCANER-FINGER": "Verification failed. Please retry. Please place your finger flat on the fingerprint scanner.",
+        "RE-SCANER-MAX": "Multiple failures. Please collect your Smart ID Card.",
+        "SCANNER-NOT-CONNECT": "System failure. Please approach our staff for assistance. (Error code: GE01)",
+        "READER-GATE-FAIL-TRY": "System failure. Please approach our staff for assistance. (Error code: GE02)",
+        "OPEN-GATE-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE03)",
+        "OPEN-GATE-INIT-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "READER-OLD-NO-CARD": "Please insert Smart ID Card to start the process",
+        "READER-OLD-UNIDENTIFIED-CARD": "Failed to recognise a valid Smart ID Card. Please insert again.",
+        "READER-OLD-FAIL-LIMIT": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "READER-NEW-INIT-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE05)",
+        "READER-NEW-NO-CARD": "Please place your Smart ID Card onto the Optical Reader(chip facing upward).",
+        "READER-NEW-UNIDENTIFIED-CARD": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "REDAER-NEW-UNIDENTIFIED-CARD-LIMIT": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "READER-NEW-THIRD-CARD": "Please insert your Smart ID Card.",
+        "READER-OLD-CLIP-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "READER-NEW-RFID-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "READER-OLD-NEW-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "OPEN-CARD-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE03)",
+        "OCR-READER-ERROR-TRY": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "NO-CARD-OCR-READER": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "CANNOT-IDENTIFY-TRY": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "READ-CARD-FAIL-TERMINATED": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "READ-CARD-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE06)",
+        "READ-COS-LOS-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE0B)",
+        "READ-FINGERPRINT-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE08)",
+        "UPDATE-COS-LOS-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE0C)",
+        "OPEN-CARD-EXCEPTON-NOCARD": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "READER-HAVE-CARD-NOTE": "System failure. Please approach our staff for assistance. (Error code: GE03)",
+        "CARD-ABNORMAL-NO-READ-DATA": "System failure. Please approach our staff for assistance. (Error code: GE05)",
+        "UNREAD-CARD-BAD-TRY": "System failure. Please approach our staff for assistance. (Error code: GE05)",
+        "READ-DATA-MAX": "System failure. Please approach our staff for assistance. (Error code: GE06)",
+        "FINGER-FLAT": "Please place your finger flat on the fingerprint scanner.",
+        "MESSAGE-TIMEOUT": "Operation timeout. Please approach our staff for assistance.",
+        "FINGERPRINT-NOT-MATCH-FINGER": "System failure. Please approach our staff for assistance. (Error code: GE07)",
+        "FINGERPRINT-NOT-DETECT-FINGER": "Verification failed. Please retry.\n Please place your finger flat on the fingerprint scanner.",
+        "FINGERPRINT-NOT-DETECT-LIMT-MAX": "Multiple failures. Please collect your Smart ID Card and approach our staff for assistance.",
+        "FINGERPRINT-DEVICE-EXCEPTION": "System failure. Please approach our staff for assistance. (Error code: GE08)",
+        "WEB-SERVICE-GET-COS-LOS-EMPTY": "System failure. Please approach our staff for assistance. (Error code: GE0B)",
+        "CALL-WEB-SERVICE-EXCEPTION": "System failure. Please approach our staff for assistance. (Error code: GE0C)",
+        "UPDATE-COS-LOS-FAILED-EXCEPTION": "System failure. Please approach our staff for assistance. (Error code: GE0D)",
+        "READER-COLLECT-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE0F)",
+        "NOT-APPLICABLE": "Not applicable",
+        "TIMEER-OUT-COUNT": "Time Remaining",
+        "COLLECT-CARD-SURE": "Please collect your Smart ID Card.",
+        "BILL-PRINT-BTN": "Print",
+        "BILL-PRINT-MESSAGE": "Are you sure to print？",
+        "BILL_PRINT_EXCEPTION": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "COMFIRM-OCR-READER": "If you have a new smart ID card, you can put it in an optical reader to continue using the service. Do you need to continue?",
+        "INSERT_CARD_SCREEN_S1": "",
+        "INSERT_CARD_SCREEN_S2": "System failure. Please approach our staff for assistance. (Error code: GE07)",
+        "INSERT_CARD_SCREEN_S3": "System failure. Please approach our staff for assistance. (Error code: GE09)",
+        "INSERT_CARD_SCREEN_S4": "Please insert your Smart ID Card to start the process.",
+        "INSERT_CARD_SCREEN_S5": "Please insert your Smart ID Card according to the guidelines.",
+        "INSERT_CARD_SCREEN_S6": "System failure. Please approach our staff for assistance. (Error code: GE08)",
+        "INSERT_CARD_SCREEN_S6_1": "Card reading fail. If you are the holder of new HKIC, you can continue the application by presenting your card on the optical character reader.",
+        "INSERT_CARD_SCREEN_S7": "System failure. Please approach our staff for assistance. (Error code: GE09)",
+        "INSERT_CARD_SCREEN_S7_1": "System failure. Please approach our staff for assistance. (Error code: GE0A)",
+        "OCR_READER_SCREEN_S8" : "System failure. Please approach our staff for assistance. (Error code: GE0B)",
+        "OCR_READER_SCREEN_S9" : "System failure. Please approach our staff for assistance. (Error code: GE0D)",
+        "OCR_READER_SCREEN_S10" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader.",
+        "OCR_READER_SCREEN_S10_1" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "OCR_READER_SCREEN_S11" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "OCR_READER_SCREEN_S11_1" : "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "OCR_READER_SCREEN_S12" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
+        "OCR_READER_SCREEN_S13" : "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "PROCESS_SCREEN_S14" : "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "INIT_CONFIG_PARAM_ERROR": "System failure. Please approach our staff for assistance.",
+        "TAKE_CARD_BTN" : "Take Card",
+        "PUT_CARD_TRY_MAX": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
+        "OCR_READER_SCREEN_S16" : "Failed to recognise a valid Smart ID Card. Please insert your Smart ID Card again (chip facing upward).",
+        "OCR_READER_SCREEN_S17" : "Failed to recognise a valid Smart ID Card.Please place your Smart ID Card onto the Optical Reader(chip facing upward).",
+        "N2E": "Employment - Permitted to remain until ",
+        "R2E": "Employment - Permitted to remain until ",
+        "N2H": "Employment - Permitted to remain until.Change of employer is not permitted",
+        "R2H": "Employment - Permitted to remain until.Change of employer is not permitted",
+        "N2S": "Student - Permitted to remain until ",
+        "R2S": "Student - Permitted to remain until ",
+        "N2W": "Employment - Permitted to remain until.Change of employer is not permitted",
+        "R2W": "Employment - Permitted to remain until.Change of employer is not permitted",
+        "N2X": "Student - Permitted to remain until ",
+        "R2X": "Student - Permitted to remain until ",
+        "N2Y": "Student - Permitted to remain until ",
+        "R2Y": "Student - Permitted to remain until ",
+        "N2": "Permitted to remain until ",
+        "R2": "Permitted to remain until ",
+        "V3T": "Permitted to remain until ",
+        "V3": "Visitor - Permitted to remain until ",
+        "COS_LOS": "Condition of Stay and Limit of Stay",
+        "FAILED-RECOGNISE": "Failed to recognise a valid Smart ID Card.",
+        "NOT-COLLECT-CARD": "Operation timeout. Please approach our staff for assistance. (Error code: GEFF)",
+        "HAS_CARD": "Please remove the object on the Optical Reader to continue the process.You may approach our staff for assistance if required.",
+        "CSLS-NOT-APPLICABLE": "This service is not applicable to your Smart ID Card.Please approach our staff for assistance if needed.",
+        "CSLS-UPDATE-ORIGIN": "Your previous Condition of Stay and Limit of Stay were:",
+        "CSLS-UPDATE-NOW": "Your updated Condition of Stay and Limit of Stay are:",
+        "CSLS-UPDATE-COMMENT": "Note:You should refer to the detailed Condition of Stay and Limit of Stay last endorsed on your travel document by the Hong Kong Immigration Department.",
+        "CSLS-BASE": "Your Condition of Stay and Limit of Stay are:",
+        "PREPARING": "Preparing, please wait..."
     }
 }
