--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -322,5 +322,157 @@
     },
     "SCN-GEN-COUNTDOWN": {
         "TIMEOUT-NO-RESPONSE":"沒有收到響應，服務終止。"
+    },
+    "SCN-GEN-STEPS": {
+        "TIME-REMAIN": "剩餘時間",
+        "PRIV-POLICY-HEADER": "請向下移並閱讀私隱政策。於方格上打剔並按下”確認”按鈕以繼續程序。",
+        "PRIV-POLICY": "私隱政策",
+        "PRIV-POLICY-PAR": "香港特別行政區政府（下稱「政府」）會確保所有透過「自助登記站」遞交的個人資料，均嚴格遵守《個人資料（私隱）條例》的有關條文處理。",
+        "COLLECTION-INFO": "收集資料",
+        "COLLECTION-INFO-PAR": "政府會使用小型文字檔案（cookies）及網站信標（page tagging）記錄「自助登記站」的瀏覽情況，但不會收集任何足以辨識使用者身分的資料。",
+        "COOKIES": "小型文字檔案（Cookies）",
+        "COOKIES-PAR": "當使用者用電腦瀏覽一個網站時，小型文字檔案會建立於電腦內，這種檔案通常包含匿名而獨有的識別符，用以辨識個別電腦，但不能用以收集任何個人資料，即是說，不具備辨識網站個別使用者的功能。\n\n 政府使用小型文字檔案收集的「自助登記站」統計資料包括瀏覽人次、使用者對網站及「自助登記站」提供的網上服務的喜好。\n\n你可選擇接受或拒絕貯存小型文字檔案。如你拒絕貯存小型文字檔案，將不能使用「自助登記站」的某些功能，例如貯存你使用「自助登記站」瀏覽喜好及登入「自助登記站」的某些網上服務。",
+        "PAGE-TAGGING": "網站信標（Page tagging）",
+        "PAGE-TAGGING-PAR": "政府使用JavaScript 及 像素標籤 （pixel tags） 收集客戶的「自助登記站」使用模式和「自助登記站」政府網上服務的使用模式等統計資料，以及追蹤政府網上廣告的成效。像素標籤是放在特定網頁上的透明圖檔，用以收集瀏覽數據。收集得來的數據經整合及分析後，會用作量度成效，用以改善「自助登記站」的易用性及「自的易用性及「自助登記站」提供的服務／網上廣告，但不會用以收集個人資料或足以辨識個別使用者的資料。\n\n你可關閉電腦上的JavaScript，關閉JavaScript不會影響你登入「自助登記站」，但你將不能使用「自助登記站」某些功能，例如改變文字大小和透過「自助登記站」登入政府的網上服務。",
+        "PROVISION-PERSONAL-DATA": "提供個人資料",
+        "PROVISION-PERSONAL-DATA-PAR": "政府可能會於不同期間及為個別原因，邀請你自願提供個人資料。此等資料可能包括姓名、電話號碼、郵寄地址或電郵地址。政府邀請你提供資料時，會列明收集資料的目的和用途，並會告知你如何要求查閱或改正所提供的個人資料。\n\n 除非法律許可或有所規定，政府不會在未得到你的同意下透露你的個人資料予第三者。\n\n「自助登記站」使用保密插口層（SSL）通訊協定傳送網上登記的資料，以確保你的個人資料得到保護。政府會將你於「自助登記站」提供的個人資料保密，只有獲得授權的人士才可查閱。",
+        "SEARCH-SERVICE": "搜尋服務",
+        "SEARCH-SERVICE-PAR": "「自助登記站」的搜尋服務是由一個政府的獨立承辦商提供。該獨立承辦商通知我們該公司於「自助登記站」提供搜尋結果時，不會收集可識別個人身分的資料。但該獨立承辦商會將你一些經由使用搜尋服務所得的匿名資料交予政府，作政府網站流量分析之用。政府不會從任何上述搜尋活動收集到的數據，跟任何 可能由政府持有的個人身分資料配對。",
+        "PRIV-POLICY-AGREE": "我已閱讀並同意以上的私隱政策。",
+        "INSERT-HKID": "請插入你的智能身份證 (晶片向上)。",
+        "PLACE-RIGHT-FP": "請將手指平放在指紋掃描器上。",
+        "PLACE-LEFT-FP": "請將手指平放在指紋掃描器上。",
+        "ABORT": "退出",
+        "VIEW_INFO_CARD": "讀取身份證晶片內的個人資料",
+        "UPDATE-CONDITION-STAY": "更新身份證晶片內的逗留條件及逗留限制期限",
+        "TYPE-OF-HKID-CARD": "請選擇你持有的身份證的類型：",
+        "COLLECT-HKID-CARD": "請取回你的智能身份證。",
+        "UPDATE-STAY-CONDITION-INFO": "身份證晶片內的逗留條件及逗留期限已更新為：",
+        "CONDITION-OF-STAY": "逗留條件：",
+        "LIMIT-OF-STAY": "逗留期限：",
+        "PROCESSING-READ": "處理中，請稍候。",
+        "ABORT_CONFIRM": "你是否確定退出程序？",
+        "YES": "確定",
+        "NO": "取消",
+        "NEXT": "下一步",
+        "PROCESSING": "處理中，請稍候。",
+        "OLD-HKID-CARD-LABLE": "選擇舊卡",
+        "NEW-HKID-CARD-LABLE": "選擇新卡",
+        "NOT-CONFIRM-MSG": "請取回你的申請表格/現有身份證，並前往取卡處查詢。",
+        "NAME-IN-CHINESE": "中文姓名",
+        "NAME-IN-ENGLISH": "英文姓名",
+        "NAME-IN-CCC": "中文姓名電碼",
+        "DATE-OF-BIRTH": "出生日期",
+        "SYMBOLS": "符號標記",
+        "DATE-OF-ISSUE": "簽發日期",
+        "OTHER-APPLICATIONS": "其他申請",
+        "SEX": "性別",
+        "SEX-M": "男",
+        "SEX-F": "女",
+        "MONTH-YEAR-REGISTRATION": "首次登記日期",
+        "ID-CARD-NO": "身份證號碼",
+        "COND-STAY": "逗留條件",
+        "LENGTH-STAY": "逗留期限",
+        "TIMMER": "剩餘時間",
+        "LANGUAGE": "English",
+        "NAVIGATION": "步驟",
+        "CONFIRM-INFO": "身份證上晶片內的個人資料如下：",
+        "CONFIRM": "確認",
+        "RE-SCANER-FINGER": "未能核實，請重試。\n 請將手指平放在指紋掃描器上。",
+        "RE-SCANER-MAX": "多次未能核實。\n 請取回你的智能身份證。",
+        "SCANNER-NOT-CONNECT": "系統故障。\n 請取回你的身份證並向職員求助。\n (錯誤編碼: GE01)",
+        "OPEN-GATE-FAIL": "系統故障。\n請向職員求助 \n (錯誤編碼: GE02)",
+        "OPEN-GATE-INIT-FAIL": "系統故障。\n請向職員求助 \n (錯誤編碼: GE02)",
+        "OPEN-CARD-ERROR": "系統故障。\n請向職員求助 \n (錯誤編碼: GE03)",
+        "OCR-READER-ERROR-TRY": "系統故障。\n請向職員求助 \n (錯誤編碼: GE04)",
+        "READER-OLD-NO-CARD": "請插入身份證以使用服務",
+        "READER-OLD-UNIDENTIFIED-CARD": "未能識別有效的智能身份證。\n 請重新放上。",
+        "READER-OLD-FAIL-LIMIT": "未能識別有效的智能身份證。\n 請取回你的身份證並向職員求助。",
+        "READER-NEW-INIT-FAIL": "系統故障。\n 請向職員求助\n (錯誤編碼: GE05)",
+        "READER-NEW-NO-CARD": "請將你的身份證放在光學閱讀器上(晶片向上)。",
+        "READER-NEW-UNIDENTIFIED-CARD": "未能識別有效的智能身份證，請重新放上。",
+        "REDAER-NEW-UNIDENTIFIED-CARD-LIMIT": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
+        "READER-NEW-THIRD-CARD": "請將你第三代身份證插入身份證閱讀器，然後繼續使用服務",
+        "READER-OLD-CLIP-FAIL": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
+        "READER-NEW-RFID-FAIL": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
+        "READER-OLD-NEW-FAIL": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
+        "NO-CARD-OCR-READER": "未能識別有效的智能身份證，請重新放上。",
+        "CANNOT-IDENTIFY-TRY": "未能識別有效的智能身份證，請重新放上。",
+        "READ-CARD-FAIL-TERMINATED": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
+        "READ-CARD-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE06)",
+        "READ-COS-LOS-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE0B)",
+        "READ-FINGERPRINT-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE08)",
+        "UPDATE-COS-LOS-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE0C)",
+        "OPEN-CARD-EXCEPTON-NOCARD": "系統故障。請向職員求助。(錯誤編碼: GE04)",
+        "READER-HAVE-CARD-NOTE": "系統故障。請向職員求助。(錯誤編碼: GE03)",
+        "CARD-ABNORMAL-NO-READ-DATA": "系統故障。請向職員求助。(錯誤編碼: GE05)",
+        "UNREAD-CARD-BAD-TRY":"系統故障。請向職員求助。(錯誤編碼: GE05)",
+        "READ-DATA-MAX": "系統故障。請向職員求助。(錯誤編碼: GE06)",
+        "FINGER-FLAT": "請將手指平放在指紋掃描器上。",
+        "MESSAGE-TIMEOUT": "操作逾時。請向職員求助。",
+        "FINGERPRINT-NOT-MATCH-FINGER": "系統故障。請向職員求助。(錯誤編碼: GE07)",
+        "FINGERPRINT-NOT-DETECT-FINGER": "未能核實，請重試。\n 請將手指平放在指紋掃描器上。",
+        "FINGERPRINT-NOT-DETECT-LIMT-MAX": "多次未能核實。\n 請取回你的身份證並向職員求助。",
+        "FINGERPRINT-DEVICE-EXCEPTION": "系統故障。請向職員求助。(錯誤編碼: GE08)",
+        "WEB-SERVICE-GET-COS-LOS-EMPTY": "系統故障。請向職員求助。(錯誤編碼: GE0B)",
+        "CALL-WEB-SERVICE-EXCEPTION": "系統故障。請向職員求助。(錯誤編碼: GE0C)",
+        "UPDATE-COS-LOS-FAILED-EXCEPTION": "系統故障。請向職員求助。(錯誤編碼: GE0D)",
+        "READER-COLLECT-FAIL": "系統故障。請向職員求助。(錯誤編碼: GE0F)",
+        "NOT-APPLICABLE": "不適用",
+        "TIMEER-OUT-COUNT": "剩餘時間：",
+        "COLLECT-CARD-SURE": "請取回你的智能身份證。",
+        "BILL-PRINT-BTN": "打印",
+        "BILL-PRINT-MESSAGE": "確認是否要打印？",
+        "BILL_PRINT_EXCEPTION": "系統故障。請向職員求助。\n(錯誤編碼: GE04)",
+        "COMFIRM-OCR-READER": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務，你需要繼續嗎？",
+        "INSERT_CARD_SCREEN_S1": "",
+        "INSERT_CARD_SCREEN_S2": "系統故障。請向職員求助。\r\n (錯誤編碼: GE07)",
+        "INSERT_CARD_SCREEN_S3": "系統故障。請向職員求助。\n (錯誤編碼: GE09)",
+        "INSERT_CARD_SCREEN_S4": "請插入身份證以使用服務",
+        "INSERT_CARD_SCREEN_S5": "請依指示插入身份證以使用服務",
+        "INSERT_CARD_SCREEN_S6": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務，你需要繼續嗎？",
+        "INSERT_CARD_SCREEN_S6_1": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務。",
+        "INSERT_CARD_SCREEN_S7": "系統故障。請向職員求助。(錯誤編碼: GE09)",
+        "INSERT_CARD_SCREEN_S7_1": "系統故障。請向職員求助。(錯誤編碼: GE0A)",
+        "OCR_READER_SCREEN_S8" : "系統故障。請向職員求助。(錯誤編碼: GE0B)",
+        "OCR_READER_SCREEN_S9" : "系統故障。請向職員求助。(錯誤編碼: GE0D)",
+        "OCR_READER_SCREEN_S10" : "未能識別有效的智能身份證。\n請將你的身份證放在光學閱讀器上。",
+        "OCR_READER_SCREEN_S10_1" : "未能識別有效的智能身份證。\n請取回你的身份證並向職員求助。",
+        "OCR_READER_SCREEN_S11" : "未能識別有效的智能身份證。\n請將你的身份證放在光學閱讀器上。",
+        "OCR_READER_SCREEN_S11_1" : "未能識別有效的智能身份證。\n請取回你的身份證並向職員求助。",
+        "OCR_READER_SCREEN_S12" : "未能識別有效的智能身份證。\n請將你的身份證放在光學閱讀器上。",
+        "OCR_READER_SCREEN_S13" : "未能識別有效的智能身份證。\n請取回你的身份證並向職員求助。",
+        "PROCESS_SCREEN_S14" : "未能識別有效的智能身份證。\n請取回你的身份證並向職員求助。",
+        "INIT_CONFIG_PARAM_ERROR": "系統故障。請向職員求助。(錯誤編碼: GE0E)",
+        "TAKE_CARD_BTN" : "取回身份證",
+        "PUT_CARD_TRY_MAX": "未能識別有效的智能身份證。\n請向職員求助。",
+        "OCR_READER_SCREEN_S16" : "未能識別有效的智能身份證。\n請重新插入你的智能身份證(晶片向上)。",
+        "OCR_READER_SCREEN_S17" : "未能識別有效的智能身份證。請將你的身份證放在光學閱讀器上(晶片向上)。",
+        "N2E": "僱傭工作-批准逗留至",
+        "R2E": "僱傭工作-批准逗留至",
+        "N2H": "僱傭工作-批准逗留至.不得轉換僱主",
+        "R2H": "僱傭工作-批准逗留至.不得轉換僱主",
+        "N2S": "學生-批准逗留至",
+        "R2S": "學生-批准逗留至",
+        "N2W": "僱傭工作-批准逗留至.不得轉換僱主",
+        "R2W": "僱傭工作-批准逗留至.不得轉換僱主",
+        "N2X": "學生-批准逗留至",
+        "R2X": "學生-批准逗留至",
+        "N2Y": "學生-批准逗留至",
+        "R2Y": "學生-批准逗留至",
+        "N2": "批准逗留至",
+        "R2": "批准逗留至",
+        "V3T": "批准逗留至",
+        "V3": "訪客-批准逗留至",
+        "COS_LOS": "逗留條件和逗留期限",
+        "FAILED-RECOGNISE": "未能識別有效的智能身份證。",
+        "NOT-COLLECT-CARD": "操作逾時。請向職員求助。(錯誤編碼: GEFF)",
+        "HAS_CARD": "請先移除光學閱讀器上的物件，以繼續程序。如需協助，請與職員聯絡。",
+        "CSLS-NOT-APPLICABLE": "本服務並不適用於你的身份證。如須協助，請與職員聯絡。",
+        "CSLS-UPDATE-ORIGIN": "你原有的逗留條件及逗留期限是：",
+        "CSLS-UPDATE-NOW": "你的逗留條件及逗留期限已更新爲：",
+        "CSLS-UPDATE-COMMENT": "注：詳細的逗留條件和逗留期限以香港入境事務處在你的旅行證件上最近期的簽注爲準。",
+        "CSLS-BASE": "你的逗留條件及逗留期限是：",
+        "PREPARING": "準備中，請稍候。"
     }
 }
