--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -379,13 +379,13 @@
         "RE-SCANER-FINGER": "Verification failed. Please retry. Please place your finger flat on the fingerprint scanner.",
         "RE-SCANER-MAX": "Multiple failures. Please collect your Smart ID Card.",
         "SCANNER-NOT-CONNECT": "System failure. Please approach our staff for assistance. (Error code: GE01)",
-        "READER-GATE-FAIL-TRY": "System failure. Please approach our staff for assistance. (Error code: GE02)",
-        "OPEN-GATE-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE03)",
-        "OPEN-GATE-INIT-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "READER-GATE-FAIL-TRY": "System failure. Please approach our staff for assistance.",
+        "OPEN-GATE-FAIL": "System failure. Please approach our staff for assistance.",
+        "OPEN-GATE-INIT-FAIL": "System failure. Please approach our staff for assistance.",
         "READER-OLD-NO-CARD": "Please insert Smart ID Card to start the process",
         "READER-OLD-UNIDENTIFIED-CARD": "Failed to recognise a valid Smart ID Card. Please insert again.",
         "READER-OLD-FAIL-LIMIT": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
-        "READER-NEW-INIT-FAIL": "System failure. Please approach our staff for assistance. (Error code: GE05)",
+        "READER-NEW-INIT-FAIL": "System failure. Please approach our staff for assistance.",
         "READER-NEW-NO-CARD": "Please place your Smart ID Card onto the Optical Reader(chip facing upward).",
         "READER-NEW-UNIDENTIFIED-CARD": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
         "REDAER-NEW-UNIDENTIFIED-CARD-LIMIT": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
@@ -393,20 +393,20 @@
         "READER-OLD-CLIP-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
         "READER-NEW-RFID-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
         "READER-OLD-NEW-FAIL": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
-        "OPEN-CARD-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE03)",
-        "OCR-READER-ERROR-TRY": "System failure. Please approach our staff for assistance. (Error code: GE04)",
+        "OPEN-CARD-ERROR": "System failure. Please approach our staff for assistance.",
+        "OCR-READER-ERROR-TRY": "System failure. Please approach our staff for assistance.",
         "NO-CARD-OCR-READER": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
         "CANNOT-IDENTIFY-TRY": "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
         "READ-CARD-FAIL-TERMINATED": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
-        "READ-CARD-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE06)",
-        "READ-COS-LOS-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE0B)",
-        "READ-FINGERPRINT-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE08)",
-        "UPDATE-COS-LOS-ERROR": "System failure. Please approach our staff for assistance. (Error code: GE0C)",
-        "OPEN-CARD-EXCEPTON-NOCARD": "System failure. Please approach our staff for assistance. (Error code: GE04)",
-        "READER-HAVE-CARD-NOTE": "System failure. Please approach our staff for assistance. (Error code: GE03)",
-        "CARD-ABNORMAL-NO-READ-DATA": "System failure. Please approach our staff for assistance. (Error code: GE05)",
-        "UNREAD-CARD-BAD-TRY": "System failure. Please approach our staff for assistance. (Error code: GE05)",
-        "READ-DATA-MAX": "System failure. Please approach our staff for assistance. (Error code: GE06)",
+        "READ-CARD-ERROR": "System failure. Please approach our staff for assistance.",
+        "READ-COS-LOS-ERROR": "System failure. Please approach our staff for assistance.",
+        "READ-FINGERPRINT-ERROR": "System failure. Please approach our staff for assistance.",
+        "UPDATE-COS-LOS-ERROR": "System failure. Please approach our staff for assistance.",
+        "OPEN-CARD-EXCEPTON-NOCARD": "System failure. Please approach our staff for assistance.",
+        "READER-HAVE-CARD-NOTE": "System failure. Please approach our staff for assistance.",
+        "CARD-ABNORMAL-NO-READ-DATA": "System failure. Please approach our staff for assistance.",
+        "UNREAD-CARD-BAD-TRY": "System failure. Please approach our staff for assistance.",
+        "READ-DATA-MAX": "System failure. Please approach our staff for assistance.",
         "FINGER-FLAT": "Please place your finger flat on the fingerprint scanner.",
         "MESSAGE-TIMEOUT": "Operation timeout. Please approach our staff for assistance.",
         "FINGERPRINT-NOT-MATCH-FINGER": "System failure. Please approach our staff for assistance. (Error code: GE07)",
@@ -425,16 +425,16 @@
         "BILL_PRINT_EXCEPTION": "System failure. Please approach our staff for assistance. (Error code: GE04)",
         "COMFIRM-OCR-READER": "If you have a new smart ID card, you can put it in an optical reader to continue using the service. Do you need to continue?",
         "INSERT_CARD_SCREEN_S1": "",
-        "INSERT_CARD_SCREEN_S2": "System failure. Please approach our staff for assistance. (Error code: GE07)",
-        "INSERT_CARD_SCREEN_S3": "System failure. Please approach our staff for assistance. (Error code: GE09)",
+        "INSERT_CARD_SCREEN_S2": "System failure. Please approach our staff for assistance.",
+        "INSERT_CARD_SCREEN_S3": "System failure. Please approach our staff for assistance.",
         "INSERT_CARD_SCREEN_S4": "Please insert your Smart ID Card to start the process.",
         "INSERT_CARD_SCREEN_S5": "Please insert your Smart ID Card according to the guidelines.",
-        "INSERT_CARD_SCREEN_S6": "System failure. Please approach our staff for assistance. (Error code: GE08)",
+        "INSERT_CARD_SCREEN_S6": "System failure. Please approach our staff for assistance.",
         "INSERT_CARD_SCREEN_S6_1": "Card reading fail. If you are the holder of new HKIC, you can continue the application by presenting your card on the optical character reader.",
-        "INSERT_CARD_SCREEN_S7": "System failure. Please approach our staff for assistance. (Error code: GE09)",
-        "INSERT_CARD_SCREEN_S7_1": "System failure. Please approach our staff for assistance. (Error code: GE0A)",
-        "OCR_READER_SCREEN_S8" : "System failure. Please approach our staff for assistance. (Error code: GE0B)",
-        "OCR_READER_SCREEN_S9" : "System failure. Please approach our staff for assistance. (Error code: GE0D)",
+        "INSERT_CARD_SCREEN_S7": "System failure. Please approach our staff for assistance.",
+        "INSERT_CARD_SCREEN_S7_1": "System failure. Please approach our staff for assistance.",
+        "OCR_READER_SCREEN_S8" : "System failure. Please approach our staff for assistance.",
+        "OCR_READER_SCREEN_S9" : "System failure. Please approach our staff for assistance.",
         "OCR_READER_SCREEN_S10" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader.",
         "OCR_READER_SCREEN_S10_1" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
         "OCR_READER_SCREEN_S11" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
@@ -442,7 +442,7 @@
         "OCR_READER_SCREEN_S12" : "Failed to recognise a valid Smart ID Card. Please place your Smart ID Card onto the Optical Reader again.",
         "OCR_READER_SCREEN_S13" : "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
         "PROCESS_SCREEN_S14" : "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
-        "INIT_CONFIG_PARAM_ERROR": "System failure. Please approach our staff for assistance.",
+        "INIT_CONFIG_PARAM_ERROR": "System failure. Please approach our staff for assistance. (Error code: GE04)",
         "TAKE_CARD_BTN" : "Take Card",
         "PUT_CARD_TRY_MAX": "Failed to recognise a valid Smart ID Card. Please collect your Smart ID Card and approach our staff for assistance.",
         "OCR_READER_SCREEN_S16" : "Failed to recognise a valid Smart ID Card. Please insert your Smart ID Card again (chip facing upward).",
