--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -381,14 +381,14 @@
         "RE-SCANER-FINGER": "未能核實，請重試。\n 請將手指平放在指紋掃描器上。",
         "RE-SCANER-MAX": "多次未能核實。\n 請取回你的智能身份證。",
         "SCANNER-NOT-CONNECT": "系統故障。\n 請取回你的身份證並向職員求助。\n (錯誤編碼: GE01)",
-        "OPEN-GATE-FAIL": "系統故障。\n請向職員求助 \n (錯誤編碼: GE02)",
-        "OPEN-GATE-INIT-FAIL": "系統故障。\n請向職員求助 \n (錯誤編碼: GE02)",
-        "OPEN-CARD-ERROR": "系統故障。\n請向職員求助 \n (錯誤編碼: GE03)",
-        "OCR-READER-ERROR-TRY": "系統故障。\n請向職員求助 \n (錯誤編碼: GE04)",
+        "OPEN-GATE-FAIL": "系統故障。\n請向職員求助。",
+        "OPEN-GATE-INIT-FAIL": "系統故障。\n請向職員求助。",
+        "OPEN-CARD-ERROR": "系統故障。\n請向職員求助。",
+        "OCR-READER-ERROR-TRY": "系統故障。\n請向職員求助。",
         "READER-OLD-NO-CARD": "請插入身份證以使用服務",
         "READER-OLD-UNIDENTIFIED-CARD": "未能識別有效的智能身份證。\n 請重新放上。",
         "READER-OLD-FAIL-LIMIT": "未能識別有效的智能身份證。\n 請取回你的身份證並向職員求助。",
-        "READER-NEW-INIT-FAIL": "系統故障。\n 請向職員求助\n (錯誤編碼: GE05)",
+        "READER-NEW-INIT-FAIL": "系統故障。\n 請向職員求助。",
         "READER-NEW-NO-CARD": "請將你的身份證放在光學閱讀器上(晶片向上)。",
         "READER-NEW-UNIDENTIFIED-CARD": "未能識別有效的智能身份證，請重新放上。",
         "REDAER-NEW-UNIDENTIFIED-CARD-LIMIT": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
@@ -399,15 +399,15 @@
         "NO-CARD-OCR-READER": "未能識別有效的智能身份證，請重新放上。",
         "CANNOT-IDENTIFY-TRY": "未能識別有效的智能身份證，請重新放上。",
         "READ-CARD-FAIL-TERMINATED": "未能識別有效的智能身份證。請取回你的身份證並向職員求助。",
-        "READ-CARD-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE06)",
-        "READ-COS-LOS-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE0B)",
-        "READ-FINGERPRINT-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE08)",
-        "UPDATE-COS-LOS-ERROR": "系統故障。請向職員求助。(錯誤編碼: GE0C)",
-        "OPEN-CARD-EXCEPTON-NOCARD": "系統故障。請向職員求助。(錯誤編碼: GE04)",
-        "READER-HAVE-CARD-NOTE": "系統故障。請向職員求助。(錯誤編碼: GE03)",
-        "CARD-ABNORMAL-NO-READ-DATA": "系統故障。請向職員求助。(錯誤編碼: GE05)",
-        "UNREAD-CARD-BAD-TRY":"系統故障。請向職員求助。(錯誤編碼: GE05)",
-        "READ-DATA-MAX": "系統故障。請向職員求助。(錯誤編碼: GE06)",
+        "READ-CARD-ERROR": "系統故障。請向職員求助。",
+        "READ-COS-LOS-ERROR": "系統故障。請向職員求助。",
+        "READ-FINGERPRINT-ERROR": "系統故障。請向職員求助。",
+        "UPDATE-COS-LOS-ERROR": "系統故障。請向職員求助。",
+        "OPEN-CARD-EXCEPTON-NOCARD": "系統故障。請向職員求助。",
+        "READER-HAVE-CARD-NOTE": "系統故障。請向職員求助。",
+        "CARD-ABNORMAL-NO-READ-DATA": "系統故障。請向職員求助。",
+        "UNREAD-CARD-BAD-TRY":"系統故障。請向職員求助。",
+        "READ-DATA-MAX": "系統故障。請向職員求助。",
         "FINGER-FLAT": "請將手指平放在指紋掃描器上。",
         "MESSAGE-TIMEOUT": "操作逾時。請向職員求助。",
         "FINGERPRINT-NOT-MATCH-FINGER": "系統故障。請向職員求助。(錯誤編碼: GE07)",
@@ -426,16 +426,16 @@
         "BILL_PRINT_EXCEPTION": "系統故障。請向職員求助。\n(錯誤編碼: GE04)",
         "COMFIRM-OCR-READER": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務，你需要繼續嗎？",
         "INSERT_CARD_SCREEN_S1": "",
-        "INSERT_CARD_SCREEN_S2": "系統故障。請向職員求助。\r\n (錯誤編碼: GE07)",
-        "INSERT_CARD_SCREEN_S3": "系統故障。請向職員求助。\n (錯誤編碼: GE09)",
+        "INSERT_CARD_SCREEN_S2": "系統故障。請向職員求助。",
+        "INSERT_CARD_SCREEN_S3": "系統故障。請向職員求助。",
         "INSERT_CARD_SCREEN_S4": "請插入身份證以使用服務",
         "INSERT_CARD_SCREEN_S5": "請依指示插入身份證以使用服務",
         "INSERT_CARD_SCREEN_S6": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務，你需要繼續嗎？",
         "INSERT_CARD_SCREEN_S6_1": "讀卡錯誤，如果你持有新智能身份證，你可以把它放有光學閱讀器以繼續使用服務。",
-        "INSERT_CARD_SCREEN_S7": "系統故障。請向職員求助。(錯誤編碼: GE09)",
-        "INSERT_CARD_SCREEN_S7_1": "系統故障。請向職員求助。(錯誤編碼: GE0A)",
-        "OCR_READER_SCREEN_S8" : "系統故障。請向職員求助。(錯誤編碼: GE0B)",
-        "OCR_READER_SCREEN_S9" : "系統故障。請向職員求助。(錯誤編碼: GE0D)",
+        "INSERT_CARD_SCREEN_S7": "系統故障。請向職員求助。",
+        "INSERT_CARD_SCREEN_S7_1": "系統故障。請向職員求助。",
+        "OCR_READER_SCREEN_S8" : "系統故障。請向職員求助。",
+        "OCR_READER_SCREEN_S9" : "系統故障。請向職員求助。",
         "OCR_READER_SCREEN_S10" : "未能識別有效的智能身份證。\n請將你的身份證放在光學閱讀器上。",
         "OCR_READER_SCREEN_S10_1" : "未能識別有效的智能身份證。\n請取回你的身份證並向職員求助。",
         "OCR_READER_SCREEN_S11" : "未能識別有效的智能身份證。\n請將你的身份證放在光學閱讀器上。",
